force-app/main/default/objects/VehicleDefinition__c/VehicleDefinition__c.object-meta.xml
<CustomObject>
    <label>차랑 정의</label>
    <nameField>
        <label>VehicleDefinition Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>