force-app/main/default/objects/VehicleDefinition__c/fields/AccelerationTime__c.field-meta.xml
<CustomField>
    <fullName>AccelerationTime__c</fullName>
    <label>Acceleration Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>