force-app/main/default/objects/VehicleDefinition__c/fields/AuxiliaryBatteryType__c.field-meta.xml
<CustomField>
    <fullName>AuxiliaryBatteryType__c</fullName>
    <label>Auxiliary Battery Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>