force-app/main/default/objects/VehicleDefinition__c/fields/BatteryCapacity__c.field-meta.xml
<CustomField>
    <fullName>BatteryCapacity__c</fullName>
    <label>Battery Capacity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>