force-app/main/default/objects/VehicleDefinition__c/fields/BodyType__c.field-meta.xml
<CustomField>
    <fullName>BodyType__c</fullName>
    <label>Body Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>