force-app/main/default/objects/VehicleDefinition__c/fields/CombinedFuelEconomy__c.field-meta.xml
<CustomField>
    <fullName>CombinedFuelEconomy__c</fullName>
    <label>Combined Fuel Economy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>