force-app/main/default/objects/VehicleDefinition__c/fields/CurbWeight__c.field-meta.xml
<CustomField>
    <fullName>CurbWeight__c</fullName>
    <label>Curb Weight</label>
    <length>255</length>
    <type>Text</type>
</CustomField>