force-app/main/default/objects/VehicleDefinition__c/fields/DoorCount__c.field-meta.xml
<CustomField>
    <fullName>DoorCount__c</fullName>
    <label>Door Count</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>