force-app/main/default/objects/VehicleDefinition__c/fields/EmissionStandard__c.field-meta.xml
<CustomField>
    <fullName>EmissionStandard__c</fullName>
    <label>Emission Standard</label>
    <length>255</length>
    <type>Text</type>
</CustomField>