force-app/main/default/objects/VehicleDefinition__c/fields/EngineCubicCapacity__c.field-meta.xml
<CustomField>
    <fullName>EngineCubicCapacity__c</fullName>
    <label>Engine Capacity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>