force-app/main/default/objects/VehicleDefinition__c/fields/EngineName__c.field-meta.xml
<CustomField>
    <fullName>EngineName__c</fullName>
    <label>Engine Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>