force-app/main/default/objects/VehicleDefinition__c/fields/ExtraUrbanFuelEconomy__c.field-meta.xml
<CustomField>
    <fullName>ExtraUrbanFuelEconomy__c</fullName>
    <label>Extra Urban Fuel Economy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>