force-app/main/default/objects/VehicleDefinition__c/fields/FuelTankCapacity__c.field-meta.xml
<CustomField>
    <fullName>FuelTankCapacity__c</fullName>
    <label>Fuel Tank Capacity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>