force-app/main/default/objects/VehicleDefinition__c/fields/MainBatteryType__c.field-meta.xml
<CustomField>
    <fullName>MainBatteryType__c</fullName>
    <label>Battery Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>