force-app/main/default/objects/VehicleDefinition__c/fields/Maximum_Gross_Weight__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Gross_Weight__c</fullName>
    <label>Maximum Gross Weight</label>
    <length>255</length>
    <type>Text</type>
</CustomField>