force-app/main/default/objects/VehicleDefinition__c/fields/Maximum_Torque__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Torque__c</fullName>
    <label>Maximum Torque</label>
    <length>255</length>
    <type>Text</type>
</CustomField>