force-app/main/default/objects/VehicleDefinition__c/fields/MaximumBatteryRange__c.field-meta.xml
<CustomField>
    <fullName>MaximumBatteryRange__c</fullName>
    <label>Battery Maximum Range</label>
    <length>255</length>
    <type>Text</type>
</CustomField>