force-app/main/default/objects/VehicleDefinition__c/fields/MinimumBatteryRange__c.field-meta.xml
<CustomField>
    <fullName>MinimumBatteryRange__c</fullName>
    <label>Battery Minimum Range</label>
    <length>255</length>
    <type>Text</type>
</CustomField>