force-app/main/default/objects/VehicleDefinition__c/fields/TopSpeed__c.field-meta.xml
<CustomField>
    <fullName>TopSpeed__c</fullName>
    <label>Top Speed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>