force-app/main/default/objects/VehicleDefinition__c/fields/TotalPower__c.field-meta.xml
<CustomField>
    <fullName>TotalPower__c</fullName>
    <label>Total Power</label>
    <length>255</length>
    <type>Text</type>
</CustomField>