force-app/main/default/objects/VehicleDefinition__c/fields/UrbanFuelEconomy__c.field-meta.xml
<CustomField>
    <fullName>UrbanFuelEconomy__c</fullName>
    <label>Urban Fuel Economy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>