force-app/main/default/objects/VehicleDefinition__c/fields/Variant_Name__c.field-meta.xml
<CustomField>
    <fullName>Variant_Name__c</fullName>
    <label>Variant Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>