force-app/main/default/objects/VehicleDefinition__c/fields/VehicleClass__c.field-meta.xml
<CustomField>
    <fullName>VehicleClass__c</fullName>
    <label>Vehicle Classification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>