force-app/main/default/objects/VehicleDefinition__c/fields/Wheelbase__c.field-meta.xml
<CustomField>
    <fullName>Wheelbase__c</fullName>
    <label>Wheelbase</label>
    <length>255</length>
    <type>Text</type>
</CustomField>